# ai-pr-reviewer

./: .env.example  .gitignore  AGENTS.md  DEMO_SCRIPT.md  LICENSE  PRODUCT.md  PR_HISTORY.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
reports/hs970411130-prog-SmartLock-1/: report.html  report.md
reports/psf-requests-7471/: report.html  report.md
reports/pytest-dev-pytest-14531/: report.html  report.md
src/: cli.py  models.py  pipeline.py
src/analyzer/: _batch.py  context.py  engine.py  risk.py  suggestion.py  summary.py
src/config/: settings.py
src/fetcher/: base.py  github.py
src/llm/: client.py
src/llm/prompts/: context.md  risk.md  suggestion.md  summary.md
src/parser/: diff_parser.py
src/reporter/: confidence.py  markdown.py  web.py
tests/: test_confidence.py  test_engine.py  test_fetcher.py  test_models.py  test_parser.py  test_summary.py
