[project]
name = "ai-pr-reviewer"
version = "0.1.0"
description = "AI PR Review 助手 — 自动分析 GitHub Pull Request"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "openai>=1.0",
    "streamlit>=1.28",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.scripts]
pr-review = "src.cli:main"